apps/multimedia/ombi/04_statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ombi
  namespace: multimedia
  labels:
    app.kubernetes.io/name: ombi
    app.kubernetes.io/version: 3.0.5202
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ombi
  serviceName: ombi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ombi
    spec:
      containers:
      - env:
        - name: TZ
          value: "Europe/Berlin"
        name: ombi
        image: linuxserver/ombi:3.0.5202-ls66
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 3579
            name: http-ombi
        readinessProbe:
          tcpSocket:
            port: http-ombi
          initialDelaySeconds: 60
          failureThreshold: 5
          timeoutSeconds: 10
        volumeMounts:
          - mountPath: /config
            name: config
        resources:
          requests:
            memory: 142M
      restartPolicy: Always
      # tolerations: # TODO: figure out where to place it
  volumeClaimTemplates:
  - metadata:
      name: config
      namespace: multimedia
      annotations:
        volume.beta.kubernetes.io/storage-class: "nfs-client"
    spec:
      storageClassName: "nfs-client"
      accessModes:
        - ReadWriteMany
      resources:
        requests:
          storage: 100Mi
