apps/multimedia/ombi/05_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ombi
  namespace: multimedia
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ombi.ankhmorpork.thaum.xyz
    secretName: ombi-tls
  rules:
  - host: ombi.ankhmorpork.thaum.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: ombi
           port: 
             name: http-ombi
